k8s/app/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
	name: frontend-depl
spec:
	replicas: 1
	selector:
		matchLabels:
			app: frontend
	template:
		metadata:
			labels:
				app: frontend
		spec:
			containers:
				- name: frontend
				resources:
					requests:
						ephemeral-storage: "800Mi"
					limits:
						ephemeral-storage: "800Mi"
				image: placeholder/frontend:1.0.4
