k8s/app/backend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
	name: backend-depl
spec:
	replicas: 1
	selector:
		matchLabels:
			app: backend
	template:
		metadata:
			labels:
				app: backend
		spec:
			volumes:
				- name: app-data
			persistentVolumeClaim:
				claimName: csi-pvc
			containers:
				- name: backend
			image: placeholder/backend:1.0.5
			volumeMounts:
				- mountPath: /app-data
				- name: app-data
---
apiVersion: v1
kind: Service
metadata:
	name: backend-srv
spec:
	selector:
		app: backend
	ports:
		- name: backend
    	protocol: TCP
    	port: 8000
    	targetPort: 8000
